# sds-locustio

./: Dockerfile  Makefile  README.md  cloudbuild-locust.yaml  pyproject.toml
.github/scripts/: bump_version.py  check_version.py
.github/workflows/: check-version.yaml
performance_tests/: Dockerfile  config.py  config_helpers.py  dataset.json  delete_firestore_locust_test_data.py  firebase_loader.py  firestore_helper.py  generated_data.json  json_generator.py  json_generator_old.py  locust_helper.py  locust_test.py  locust_tests_factory.py  locustfile.py  requirements.txt  run.sh  run_schedule_job.py  service.yaml  unit_data.txt
performance_tests/configs/: config.py  endpoints_config.py  endpoints_func.py  endpoints_helpers.py  runtime_config.py
performance_tests/postprocess/: postprocess_base.py  postprocess_cir_delete_schemas.py  postprocess_mapper.py  postprocess_result_evaluator.py
performance_tests/preprocess/: preprocess_base.py  preprocess_cir_schema.py  preprocess_mapper.py  preprocess_sds_dataset.py  preprocess_sds_schema.py
performance_tests/result_evaluation/: anomalies.py  result_evaluator.py  thresholds.py
performance_tests/test_schema/: ci_schema.json  schema.json
