[project]
name = "sds-locustio"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "firebase-admin==7.3.0",
    "functions-framework==3.9.2",
    "google-cloud-firestore==2.21.0",
    "google-cloud-scheduler==2.16.1",
    "google-cloud-storage==3.9.0",
    "google-cloud-iam>=2.21.0",
    "isort==5.12.0",
    "locust==2.30.0",
    "pip-audit==2.10.0",
    "pre-commit==3.0.4",
    "pyflakes==3.0.1",
    "pylint==2.16.1",
    "pytest-mock==3.10.0",
    "python-dotenv==1.1.1",
    "requests>=2.31.0",
    "ruff==0.13.2",
]

[dependency-groups]
version-check = [
 "toml>=0.10.2",
 "tomlkit>=0.13.3",
]

[tool.ruff]
line-length = 127
indent-width = 4

[[tool.uv.index]]
url = "https://europe-west2-python.pkg.dev/ons-sds-ci/sds-python-packages/simple/"

[tool.ruff.lint]
select = [
    # Enabling ALL is not recommended it will implicitly enable new rules after upgrade.
    # "ALL",

    # Ruff rules: https://docs.astral.sh/ruff/rules/

    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "S",      # flake8-bandit
    #"D",      # pydocstyle - Enforce existing docstrings only
    "C90",    # mccabe
    "RUF",    # Ruff specific rules

    # PL - Pylint is only partially supported, we also use the pylint tool to catch all the rules.
    # It is enabled here to take advantage of the ruff's speed.
    "PL",
]

ignore = [
    # Conflicts with google docstring style
    "D205",
    # Allow missing docstring, remove to enforce docstrings across the board
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Disable line length check as it is handled by black
    # :TODO: Remove E501 when ruff supports all black rules
    "E501",
    # indentation contains tabs
    "W191",

    # Locust SPECIFIC BELOW THIS LINE
    # subprocess call is used in some places and is not a security concern
    "S603",
    "PLW1510",
    "S607",
    # random digit generation is used in some places and is not a security concern
    "S311",
    # temporary allow global statement
    "PLW0603"

    # SDS SPECIFIC BELOW THIS LINE
    # Function call as default argument
#    "B008",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "fastapi.Depends",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Allow use of assert statements in tests
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
